<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormChildFragments.PersonalChildFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/candidate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:imeOptions="actionNext"
            android:textColorHint="#5f5f5f"
            app:hintTextAppearance="@style/MaterialEditTextFloatingLabel">

            <EditText
                android:id="@+id/candidate_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/candidate_s_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="#5f5f5f"
                android:textColorHint="#5f5f5f"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/state_of_eligibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/candidate_name"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:imeOptions="actionNext"
            android:textColorHint="#5f5f5f"
            app:hintTextAppearance="@style/MaterialEditTextFloatingLabel">

            <AutoCompleteTextView
                android:id="@+id/state_of_eligibility_autocomplete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_of_elgibility"
                android:inputType="textCapWords"
                android:textColor="#5f5f5f"
                android:textColorHint="#5f5f5f"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/gender_and_category_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/state_of_eligibility"
            android:orientation="vertical">

            <com.roughike.swipeselector.SwipeSelector
                android:id="@+id/gender_swipe_selector"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:swipe_titleTextAppearance="@style/swipeSelectorText" />

            <com.roughike.swipeselector.SwipeSelector
                android:id="@+id/category_swipe_selector"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:swipe_titleTextAppearance="@style/swipeSelectorText" />
        </LinearLayout>

        <TextView
            android:id="@+id/DOBTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/gender_and_category_linear_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/date_of_birth"
            android:textColor="#5f5f5f"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/DOBSpinnersLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/DOBTextView"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/dateSpinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1.25" />

            <Spinner
                android:id="@+id/monthSpinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="2" />

            <Spinner
                android:id="@+id/yearSpinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/person_with_disability_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/DOBSpinnersLinearLayout"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/person_with_disability_pwd"
                android:textColor="#5f5f5f" />

            <com.roughike.swipeselector.SwipeSelector
                android:id="@+id/yes_no_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                app:swipe_titleTextAppearance="@style/swipeSelectorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/girl_child_only_child_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/person_with_disability_linear_layout"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/are_you_the_only_child_of_your_parents_for_girl_child_only"
                android:textColor="#5f5f5f" />

            <com.roughike.swipeselector.SwipeSelector
                android:id="@+id/yes_no_girl_child"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1.75"
                app:swipe_titleTextAppearance="@style/swipeSelectorText" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/natonality_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/girl_child_only_child_linear_layout"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:imeOptions="actionNext"
            android:textColorHint="#5f5f5f"
            app:hintTextAppearance="@style/MaterialEditTextFloatingLabel">

            <AutoCompleteTextView
                android:id="@+id/natonality_autocomplete_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:hint="@string/nationality"
                android:inputType="textCapWords"
                android:textColor="#5f5f5f"
                android:textColorHint="@android:color/black"
                android:textSize="20sp">

            </AutoCompleteTextView>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/personal_tab_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/natonality_autocomplete"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/save"
            android:textColor="#5f5f5f" />

    </RelativeLayout>

</ScrollView>
